# wsn_sensor

./: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig
main/: CMakeLists.txt  ds18b20.c  main.c
